--- a/Frontend/Client/Pages/Login.razor
+++ b/Frontend/Client/Pages/Login.razor
@@ -1,14 +1,10 @@
-﻿@page "/fetchdata"
+﻿@page "/login"
+
 @using Frontend.Shared
-@inject HttpClient Http
 
-<PageTitle>Weather forecast</PageTitle>
+<PageTitle>Login or Sign Up</PageTitle>
 
-<h1>Weather forecast</h1>
 
-<p>This component demonstrates fetching data from the server.</p>
-
-@page "/login"
 @inject NavigationManager NavigationManager
 @inject HttpClient HttpClient
 
