JWT and Login finished. Not tested by status

--- a/Frontend/Client/Pages/Index.razor
+++ b/Frontend/Client/Pages/Index.razor
@@ -1,5 +1,5 @@
-﻿@page "/"
-@page "/index"
+﻿
+@page "/main"
 @using Frontend.Client.Services
 @using Frontend.Client.DTO;
 @inject DataService DataService
