--- a/Frontend/Client/Shared/NavMenu.razor
+++ b/Frontend/Client/Shared/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">Frontend</a>
+        <a class="navbar-brand" href="">Log Out</a>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -10,8 +10,8 @@
 <div class="@NavMenuCssClass nav-scrollable" @onclick="ToggleNavMenu">
     <nav class="flex-column">
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="/login">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Login
+            <NavLink class="nav-link" href="/main">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Main Section
             </NavLink>
         </div>
     </nav>
